--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MYSQL_HOST=localhost
-MYSQL_DB_NAME=redinformatica
+MYSQL_HOST=containers-us-west-143.railway.app
+MYSQL_DB_NAME=railway
 MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=9Lk4bt2WQCmZbzVTiFCs
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
