cambios en variables de entorno

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 MYSQL_HOST=containers-us-west-143.railway.app
 MYSQL_DB_NAME=railway
 MYSQL_USER=root
-MYSQL_PASSWORD=9Lk4bt2WQCmZbzVTiFCs
+MYSQL_PASSWORD=V2zyAwR7cxq7eZa0RGLR
+MYSQL_URL=process.env.MYSQL_URL
 
 SMTP_HOST=smtp.mailtrap.io
-SMTP_PORT=2525
+SMTP_PORT=7219
 SMTP_USER=05806b4e1fce38
 SMTP_PASS=c6afe021ba9bfe
 
